Fixes to z-index of hamburger expansion

--- a/styles/style-1.css
+++ b/styles/style-1.css
@@ -187,6 +187,7 @@ input:checked + label {
     border: thick solid #b0aeae;
     background: white;
     box-shadow: 3px 3px 8px gray;
+    z-index: 20;
 }
 
 input {
@@ -197,7 +198,7 @@ input {
 #hamburger-links { 
   opacity: 0;
   z-index: 200;
-  position: absolute;
+  position: fixed;
   top: 50px;
   left: 100px;
   transition: .25s 0s ease-in-out;
